backend/server/build_log.txt
cargo :    Compiling server 
v0.1.0 (C:\proiecte-vue\monopo
ly-world-edition\backend\serve
r)
At line:1 char:1
+ cargo build 2>&1 | Out-File 
-FilePath build_log.txt 
-Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (   Compil  
  ing se...backend\server):   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
warning: variable does not 
need to be mutable
  --> 
server\src\schema.rs:60:18
   |
60 |             Some(mut 
user) => {
   |                  ----^^^^
   |                  |
   |                  help: 
remove this `mut`
   |
   = note: 
`#[warn(unused_mut)]` (part 
of `#[warn(unused)]`) on by 
default

error[E0063]: missing fields 
`consecutive_doubles`, 
`in_jail` and `position` in 
initializer of `Player`
  --> 
server\src\schema.rs:79:27
   |
79 |             players: 
vec![Player { username: 
username.clone(), character: 
None }],
   |                          
 ^^^^^^ missing 
`consecutive_doubles`, 
`in_jail` and `position`

error[E0063]: missing field 
`game_state` in initializer 
of `Lobby`
  --> 
server\src\schema.rs:76:25
   |
76 |         let new_lobby = 
Lobby {
   |                         
^^^^^ missing `game_state`

error[E0277]: the trait bound 
`(u8, u8): OutputType` is not 
satisfied
  --> 
server\src\model.rs:39:48
   |
39 | #[derive(Debug, Clone, 
Serialize, Deserialize, 
SimpleObject)]
   |                          
                      
^^^^^^^^^^^^ the trait 
`OutputType` is not 
implemented for `(u8, u8)`
   |
   = help: the following 
other types implement trait 
`OutputType`:
             &'a [T]
             &T
             Arc<T>
             Arc<[T]>
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Box<[T]>
           and 69 others
   = note: required for 
`&(u8, u8)` to implement 
`OutputType`
   = note: the full name for 
the type has been written to '
C:\proiecte-vue\monopoly-world
-edition\backend\target\debug\
deps\server.long-type-70726121
95971249899.txt'
   = note: consider using 
`--verbose` to print the full 
type name to the console
   = note: this error 
originates in the derive 
macro `SimpleObject` (in 
Nightly builds, run with -Z 
macro-backtrace for more info)

error[E0277]: the trait bound 
`(u8, u8): OutputType` is not 
satisfied
  --> 
server\src\model.rs:44:20
   |
44 |     pub last_dice: (u8, 
u8),
   |                    
^^^^^^^^ the trait 
`OutputType` is not 
implemented for `(u8, u8)`
   |
   = help: the following 
other types implement trait 
`OutputType`:
             &'a [T]
             &T
             Arc<T>
             Arc<[T]>
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Box<[T]>
           and 69 others
   = note: the full name for 
the type has been written to '
C:\proiecte-vue\monopoly-world
-edition\backend\target\debug\
deps\server.long-type-70726121
95971249899.txt'
   = note: consider using 
`--verbose` to print the full 
type name to the console

error: future cannot be sent 
between threads safely
   --> 
server\src\schema.rs:30:1
    |
 30 | #[Object]
    | ^^^^^^^^^ future 
created by async block is not 
`Send`
    |
    = help: within `{async blo
ck@server\src\schema.rs:30:1: 
30:10}`, the trait 
`std::marker::Send` is not 
implemented for `Rc<UnsafeCell
<ReseedingRng<rand_chacha::cha
cha::ChaCha12Core, OsRng>>>`
note: future is not `Send` as 
this value is used across an 
await
   --> 
server\src\schema.rs:196:15
    |
178 |             let mut rng 
= rand::thread_rng();
    |                 ------- 
has type `ThreadRng` which is 
not `Send`
...
196 |             ).await?;
    |               ^^^^^ 
await occurs here, with `mut 
rng` maybe used later
    = note: required for the 
cast from `Pin<Box<{async bloc
k@server\src\schema.rs:30:1: 
30:10}>>` to `Pin<Box<dyn 
Future<Output = 
Result<Option<Value>, ...>> + 
Send>>`
    = note: the full name for 
the type has been written to '
C:\proiecte-vue\monopoly-world
-edition\backend\target\debug\
deps\server.long-type-68052588
14201222866.txt'
    = note: consider using 
`--verbose` to print the full 
type name to the console
    = note: this error 
originates in the attribute 
macro `Object` (in Nightly 
builds, run with -Z 
macro-backtrace for more info)

Some errors have detailed 
explanations: E0063, E0277.
For more information about an 
error, try `rustc --explain 
E0063`.
warning: `server` (bin 
"server") generated 1 warning
error: could not compile 
`server` (bin "server") due 
to 5 previous errors; 1 
warning emitted
